--- a/Bulky/Areas/Admin/Views/Product/Index.cshtml
+++ b/Bulky/Areas/Admin/Views/Product/Index.cshtml
@@ -6,7 +6,7 @@
             <h2 class="text-primary">Product List</h2>
         </div>
         <div class="col-6 text-end">
-            <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
+            <a asp-controller="Product" asp-action="Create" class="btn btn-primary">
                 <i class="bi bi-plus-circle"></i> Create New Product
             </a>
         </div>        
@@ -28,12 +28,12 @@
                     <td>@obj.Author</td>
                     <td>
                         <div class="w-75 btn-group">
-                            <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                            <a asp-controller="Product" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
                                 <i class="bi bi-pencil-square"></i> Edit
                             </a>
-                            <a asp-controller="Category" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
+                            <a asp-controller="Product" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
                                 <i class="bi bi-trash-fill"></i> Delete
-                            </a>                            
+                            </a>                           
                         </div>
                     </td>
                     
