--- a/Bulky/Views/Shared/_Layout.cshtml
+++ b/Bulky/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                                 </li>
                                  <li><hr class="dropdown-divider"></li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark dropdown-item" asp-area="Admin" asp-controller="Book" asp-action="Index">Books</a>
+                                    <a class="nav-link text-dark dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Books</a>
                                 </li>                                 
                             </ul>
                         </li>
